[gd_scene load_steps=6 format=3 uid="uid://xgji17ywxot7"]

[ext_resource type="PackedScene" uid="uid://bp2r16k545otu" path="res://scenes/window/window.tscn" id="1_ypbx4"]
[ext_resource type="Script" uid="uid://cjpqmum7es1iv" path="res://scripts/window_recovery.gd" id="2_6xp8y"]
[ext_resource type="Texture2D" uid="uid://cqlxul473fthx" path="res://textures/escritorio/ventana-select.png" id="3_7xqa7"]
[ext_resource type="ButtonGroup" uid="uid://diy00s0kwsd8p" path="res://scenes/resources/window_recovery_buttons.tres" id="3_kycyh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v83dp"]
texture = ExtResource("3_7xqa7")
texture_margin_top = 10.0

[node name="Window" instance=ExtResource("1_ypbx4")]
offset_right = 151.0
offset_bottom = 157.0
script = ExtResource("2_6xp8y")

[node name="TitleBar" parent="HBoxContainer" index="0"]
visible = false

[node name="CloseButton" parent="HBoxContainer/TitleBar/MarginContainer/HBoxContainer" index="0"]
visible = false

[node name="Body" parent="HBoxContainer" index="1"]
theme_override_styles/panel = SubResource("StyleBoxTexture_v83dp")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Body" index="0"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Body/MarginContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="HBoxContainer/Body/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Which pet is this?"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Body/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Body/MarginContainer/VBoxContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Body/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
button_group = ExtResource("3_kycyh")
text = "sdsddsdsd"

[node name="CheckBox2" type="CheckBox" parent="HBoxContainer/Body/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
button_group = ExtResource("3_kycyh")
text = "sdsddsdsd"

[node name="CheckBox3" type="CheckBox" parent="HBoxContainer/Body/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
button_group = ExtResource("3_kycyh")
text = "sdsddsdsd"

[node name="Submit" type="Button" parent="HBoxContainer/Body/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2
text = "Submit"

[node name="Cancel" type="Button" parent="HBoxContainer/Body/MarginContainer/VBoxContainer" index="3"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="HBoxContainer/Body/MarginContainer/VBoxContainer/Submit" to="." method="_on_submit_pressed"]
[connection signal="pressed" from="HBoxContainer/Body/MarginContainer/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
